--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body,html {
   text-shadow: 0 0 .5rem black;
 }
 
-.POINTS {
+.POINTS, .reStart {
   border: .4rem solid black;
   border-radius: .5rem;
   margin: 1rem;
