--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body,html {
 .moves {
   display: flex;
   flex: 1;
-  min-height: 50vh;
+  min-height: 30vh;
   align-items: center;
   justify-content: center;
 }
@@ -24,7 +24,7 @@ body,html {
   margin: 1rem;
   font-size: 1.5rem;
   padding: 2rem 2rem;
-  transition: all .07s ease;
+  transition: all 0.7s ease;
   width: 10rem;
   text-align: center;
   color: white;
@@ -47,7 +47,6 @@ body,html {
   margin: 1rem;
   font-size: 3rem;
   padding: 2rem 2rem;
-  transition: all .07s ease;
   width: 50rem;
   text-align: center;
   color: white;
@@ -61,7 +60,6 @@ body,html {
   margin: 1rem;
   font-size: 3rem;
   padding: 2rem 2rem;
-  transition: all .07s ease;
   width: 35rem;
   text-align: center;
   color: white;
